[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mysgen"
version = "0.3.8"
description = "My simple static site generator."
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Mladen Gibanica", email = "11275336+mgcth@users.noreply.github.com" },
]
requires-python = ">=3.8"
dependencies = [
    "Markdown ~= 3.3",
    "Pillow ~= 9.2",
    "jinja2 ~= 2.11.3",
    "python-markdown-math ~= 0.8",
    "MarkupSafe == 1.1.1",
    "boto3 ~= 1.26",
]

[project.optional-dependencies]
lint = [
    "flake8 ~= 5.0",
    "flake8-bandit ~= 4.1",
    "flake8-docstrings ~= 1.6",
    "flake8-black ~= 0.3",
]
type = [
    "mypy ~= 0.990",
    "boto3-stubs ~= 1.26",
    "types-Jinja2 ~= 2.11",
    "types-Markdown ~= 3.4",
    "types-Pillow ~= 9.3",
]
test = ["pytest ~= 7.1", "coverage ~= 6.5", "pytest-cov ~= 4.0"]
dev = [
    "mysgen[lint]",
    "mysgen[type]",
    "mysgen[test]",
    "black ~= 22.8",
    "pre-commit ~= 2.20",
]
