[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mysgen"
version = "0.4.4"
description = "My simple static site generator."
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Mladen Gibanica", email = "11275336+mgcth@users.noreply.github.com" },
]
requires-python = ">=3.8"
dependencies = [
    "Markdown ~= 3.3",
    "Pillow ~= 10.1",
    "jinja2 ~= 2.11.3",
    "python-markdown-math ~= 0.8",
    "MarkupSafe == 1.1.1",
    "boto3 ~= 1.26",
    "pillow-avif-plugin ~= 1.4"
]

[project.optional-dependencies]
lint = [ "ruff ~= 0.1"]
type = [
    "mypy ~= 1.7",
    "boto3-stubs ~= 1.29",
    "types-Jinja2 ~= 2.11",
    "types-Markdown ~= 3.5",
    "types-Pillow ~= 10.1",
]
test = ["pytest ~= 7.1", "coverage ~= 6.5", "pytest-cov ~= 4.0"]
dev = [
    "mysgen[lint]",
    "mysgen[type]",
    "mysgen[test]",
    "pre-commit ~= 2.20",
]
